fix: Fixing message composer on mobile. fixes #835
Now takes full height of window, allowing the user to see all the fields at once

--- a/modules/ept-frontend/client/scss/ept/components/_post-editor.scss
+++ b/modules/ept-frontend/client/scss/ept/components/_post-editor.scss
@@ -11,7 +11,7 @@
   right: 0;
   height: 100vh;
   width: calc(((100vw - 1300px)/2) + 240px);
-  z-index: 1500;
+  z-index: 5000;
 
   @media screen and (max-width: 1400px) {
     width: calc(#{$sidebarWidth} + #{$base-grid-padding});
@@ -23,8 +23,10 @@
     bottom: 0;
     bottom: 0;
     width: 100%;
-    height: 35vh;
+    // height: calc(100vh - 6rem);
+    height: 100%;
     box-shadow: 0 8px 16px rgba(0, 0, 0, .2);
+    z-index: 5000;
   }
 }
 
@@ -78,13 +80,19 @@
 .editor-container {
   background-color: $base-background-color;
   position: relative;
-  height: 100%;
+  height: 100vh;
   // max-width: calc(100vw - 4rem);
   // margin: 0 auto;
   border: 1px solid $border-color;
   border-bottom: 0;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  z-index: 5000;
+
+  @include break-mobile-sm {
+    height: 100%;
+  }
 }
+
 .editor-container-bar {
   display: block;
   position: absolute;
@@ -469,6 +477,7 @@
 @include media($mobile) {
   .editor-form .editor-body {
     bottom: 5rem;
+    top: 42px;
   }
   .editor-form .editor-header {
     height: 2.6rem;
@@ -592,7 +601,7 @@
   }
 
   .new-message .editor-top-bar {
-    height: 10.725rem;
+    height: 178px;
     padding: 1rem;
     div:first-child {
       padding: 0;
